--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ main .panel p{
 
 /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
 .active, .toggle:hover {
-  background-color: #8253f1;
+  background-color: #6549A8;
 }
 
 /* Style the accordion panel. Note: hidden by default */
