--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body{
   background: rgba(8, 0, 12, 0.76);
   display: block;
   font-family: 'Roboto Mono', monospace;
+  text-align: justify;
 }
 
 header{
